// Start Header

syntax = "proto3";
package main;

message Empty{
}

enum Move {
    Noop = 0;
    Left = 1;
    Right = 2;
    Up = 3;
    Down = 4;
    PlaceMark = 5;
    Quit = 6;
}

// Start Message Definitions
message MoveMessage {
  Move moveRequest = 1;
}

// Start Service Definitions
service MoveService{
  rpc PerformMove(MoveMessage) returns (Empty) {}
}